<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.taller1_empresazxy.Principal"
    android:layout_marginBottom="15dp">

    <TextView
        android:text="@string/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbSexo"
            android:layout_marginBottom="15dp"
            android:scrollbarSize="20dp" />

        <TextView
            android:text="@string/tipo_zapato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbTipoZapato"
            android:layout_marginBottom="15dp"
            android:scrollbarSize="20dp" />

        <TextView
            android:text="@string/marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbMarca"
            android:layout_marginBottom="15dp"
            android:scrollbarSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtCantidad"
            android:hint="@string/cantidad"
            android:textAlignment="center"
            android:fontFamily="monospace" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <Button
                android:text="@string/calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdCalcular"
                android:layout_weight="1"
                android:onClick="calcular" />

            <Button
                android:text="@string/cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdCancelar"
                android:layout_weight="1"
                android:onClick="borrar" />

        </LinearLayout>

        <TextView
            android:text="@string/detalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:fontFamily="casual" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/vlr_unitario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView7"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="casual"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtValorUnitario"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textAlignment="viewStart"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/vlr_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="normal|bold"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:fontFamily="casual" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtResultado"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textStyle="normal|bold"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="casual" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/firma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:layout_marginTop="15dp" />

</RelativeLayout>
